Fix popover when content is too big (fix  #1099)

--- a/client/components/ui/popover.css
+++ b/client/components/ui/popover.css
@@ -28,6 +28,10 @@
 
 .popover-content.small {
     max-width: 28em;
+
+    /* Max height: all the screen minus the header 's height + some margin */
+    max-height: calc(100vh - 50px);
+    overflow-y: auto;
 }
 
 .popover-arrow,
